# lecture-supplement-material

./: README.md
Introduction-to-AI/: !_decision_trees.ipynb  !_wine_decision_tree_old.ipynb  1-single-elder-home-monitoring.ipynb  1.ipynb  1_2_gaussian_kernel.ipynb  1_3_overfit.ipynb  1_4_lp_norm_contours.ipynb  1_5_decision_trees.ipynb  1_6_ames_iowa_housing.ipynb  1_7_empirical_distribution.ipynb  README.md  _TEMPLATE.ipynb  _binary_tree.ipynb  _empirical_distribution.ipynb  _gaussian_kernel.ipynb  _iris_decision_tree.ipynb  _linear_ols_regression.ipynb  _lp_norm_contours.ipynb  _overfit_linear_model.ipynb  _simple_linear_ols_regression.ipynb  _softmax_with_temperature.ipynb  _wine_decision_tree.ipynb  _wine_decision_tree_segmentation.ipynb  pyproject.toml
Introduction-to-AI/.ipynb_checkpoints/: 1-checkpoint.ipynb
Introduction-to-AI/docs/: explanation.md
Introduction-to-AI/figures/1_3/: polynomial_coefficients.csv
docs/: .index.markdown.swp  Gemfile  Introduction-to-AI.md  Makefile  _config.yml  index.markdown  ja.md
docs/_plugins/: loop-directory.rb-bk
docs/_posts/: 2024-07-21-welcome-to-jekyll.markdown
